# lmsys-query-analysis

./: .coverage  .gitignore  AGENTS.md  CLAUDE.md  COVERAGE_PLAN.md  COVERAGE_PLAN_REVISED.md  README.md  TESTING_STRATEGY.md  TODO.md  data-plan.md  mkdocs.yml  multi-plan.md  plan.md  pyproject.toml  smoketest.sh
.backlog/: cluster-quality-control.md
.claude/agents/: cluster-inspector.md  data-analyst.md
.cursor/rules/: database-loading.mdc
.github/workflows/: python-tests.yml
.specs/: CLASSIFICATION_SPEC.md  FASTAPI_SPEC.md
docs/: API.md  index.md
docs/api/: cli.md  clustering.md  models.md
docs/cli/: analysis.md  clustering.md  edit.md  hierarchy.md  index.md  load.md  overview.md  search.md  utilities.md
docs/experiments/: index.md
docs/getting-started/: installation.md  quickstart.md
examples/: .gitignore  README.md  example_runner.py  semantic_usage.py
scripts/: check.sh  format.sh  lint.sh  logs.sh  start-dev.sh  stop-dev.sh
src/lmsys_query_analysis/: README.md  __init__.py  config.py  runner.py
src/lmsys_query_analysis/api/: __init__.py  app.py  dependencies.py  schemas.py
src/lmsys_query_analysis/cli/: README.md  __init__.py  common.py  main.py
src/lmsys_query_analysis/clustering/: README.md  __init__.py  embeddings.py  hdbscan_clustering.py  hierarchy.py  kmeans.py  row_summarizer.py  summarizer.py
src/lmsys_query_analysis/db/: README.md  __init__.py  adapters.py  chroma.py  connection.py  loader.py  migrate.py  models.py  sources.py
src/lmsys_query_analysis/semantic/: __init__.py  clusters.py  queries.py  types.py
src/lmsys_query_analysis/services/: __init__.py  cluster_service.py  curation_service.py  export_service.py  hierarchy_service.py  query_service.py  run_service.py  summary_service.py
src/lmsys_query_analysis/utils/: README.md  logging.py
tests/: COMBINATION_PLAN.md  README.md  REORGANIZATION.md  __init__.py  conftest.py  test_cli.py  test_embeddings_smoke.py  test_loader.py  test_models.py  test_summarizer.py
tests/api/: __init__.py  conftest.py  test_endpoints.py  test_hierarchy_counts.py
tests/fixtures/: __init__.py  dataset1.csv  dataset2.csv  empty_fields.csv  invalid_headers.csv  valid_queries.csv
tests/integration/: test_chroma_integration.py  test_cli.py  test_cli_csv.py  test_cli_hf.py  test_embeddings_advanced.py  test_kmeans_detailed.py  test_multi_source.py  test_semantic_queries.py  test_semantic_sdk.py  test_service_integration.py
tests/smoke/: test_cli_smoke.py  test_clustering_smoke.py  test_embedding_smoke.py  test_search_smoke.py  test_summarization_smoke.py
tests/unit/: test_config.py
tests/unit/api/: test_dependencies.py
tests/unit/cli/: __init__.py  test_common.py
tests/unit/clustering/: __init__.py  test_embeddings.py  test_hdbscan_clustering.py  test_hierarchy.py  test_kmeans.py  test_summarizer.py
tests/unit/db/: __init__.py  test_adapters.py  test_chroma.py  test_connection.py  test_loader.py  test_models.py  test_sources.py
web/: .prettierignore  README.md  package-lock.json  package.json  playwright.config.ts
web/app/: actions.ts  layout.tsx  page.tsx
web/app/search/: page.tsx  (+1 more)
web/components/: data-viewer.tsx  hierarchy-runs-table.tsx  hierarchy-tree.tsx  jobs-table.tsx  query-list.tsx  sidebar.tsx  summary-runs-table.tsx
web/e2e/: api-integration.spec.ts  clustering-runs.spec.ts  homepage.spec.ts  search.spec.ts
web/lib/: api.ts
web/playwright-report/: index.html
web/test-results/: .last-run.json
(+65 files in other folders)
