[project]
name = "lmsys-query-analysis"
version = "0.1.0"
description = "Query analysis and clustering for LMSYS-1M dataset"
readme = "README.md"
authors = [
    { name = "jxnl", email = "jason@jxnl.co" }
]
requires-python = ">=3.10"
dependencies = [
    "datasets>=2.14.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
    "sqlmodel>=0.0.14",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "chromadb>=0.4.0",
    "instructor>=1.0.0",
    "anthropic>=0.18.0",
    "hdbscan>=0.8.33",
    "openai>=1.0.0",
    "anyio>=4.0.0",
    "ruff>=0.13.3",
]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

[project.scripts]
lmsys = "lmsys_query_analysis.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
